add start script cleanup old files